--- a/README
+++ b/README
@@ -1,3 +1,10 @@
-"Creature of Habit" chrome extension is meant to take out the kinks in your day-to-day behaviour with well-timed notifications.
+"Creature of Habit" (CoH) chrome extension is meant to take out the kinks in your day-to-day behaviour with well-timed notifications.
 
-Hopefully this extension makes better people out of us.
+**Note:** Made in 2011, it had 5 star reviews from 10 reviewers, with 500 active users. However, due to lack of updates, it has been since been removed from the Chrome Store.
+
+# Overview
+Using ExtJS 4.x, this Chrome extension was built over the weekend to solve a common problem that most developers have: sitting up straight, frequently stretching, etc. CoH came with default notifications for common scenarios, but also allowed itself to be extended with any additional reminders the user wanted. Notifications would appear as Chrome notifications, and had the option to be automatically removed after a small duration, so as to seamlessly notify you rather than linger.
+
+The codebase was structure around ExtJS 4.x's default architecture recommendation. The primary focus of the application was usability and simplicity. High reviewers and active users were testament to that.
+
+![Screenshot](/chrome/screenshot.jpg?raw=true)
